projetGL/src/test/deca/codegen/valid/ourTest/test_print_min_float.deca
// Description:
//    tests print max negative float
//
// Resultats:
//    -3.4028235E38

{
    print(-3.4028235E38); // Valeur maximale négative pour un float 32 bits en DECÀ.
}
